<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mensaplan_item">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:paddingTop="5dp"
            android:paddingBottom="10dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleHauptgericht"
                android:id="@+id/titleHauptgericht"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="10dp"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Hauptgericht1"
                android:id="@+id/textHauptgericht1"
                android:textSize="16sp"
                android:gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Hauptgericht2"
                android:id="@+id/textHauptgericht2"
                android:textSize="16sp"
                android:paddingLeft="40dp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleZusatzessen"
                android:id="@+id/titleZusatzessen"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Zusatzessen"
                android:id="@+id/textZusatzessen"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleBeilage"
                android:id="@+id/titleBeilagen"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Beilage1"
                android:id="@+id/textBeilage1"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Beilage2"
                android:id="@+id/textBeilage2"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleGemuese"
                android:id="@+id/titleGemuese"
                android:textSize="16sp"
                android:singleLine="true"
                android:layout_gravity="left"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Gemuese"
                android:id="@+id/textGemuese"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleSalate"
                android:id="@+id/titleSalate"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Salat1"
                android:id="@+id/textSalat1"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Salat2"
                android:id="@+id/textSalat2"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleSuppe"
                android:id="@+id/titleSuppen"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Suppe"
                android:id="@+id/textSuppe"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/titleDesserts"
                android:id="@+id/titleDesserts"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:padding="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Dessert"
                android:id="@+id/textDessert"
                android:textSize="16sp"
                android:paddingLeft="40dp"
                android:layout_gravity="left" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textLastUpdateMensa"
            android:layout_gravity="center"
            android:textAlignment="viewEnd"

            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:background="#C31924"
            android:textColor="#FFFFFF"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

    </RelativeLayout>

</RelativeLayout>